--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.5",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
