--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.439.0",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.20",
     "pg": "^8.12.0",
     "prisma": "^5.19.1",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
