--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "recharts": "2.13.0-alpha.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
