--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/recharts": "^1.8.29",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
@@ -32,6 +33,7 @@
     "pg": "^8.12.0",
     "prisma": "^5.19.1",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-is": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
@@ -50,5 +52,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "react-is": "$react-is"
+    }
   }
 }
