--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.439.0",
     "next": "15.0.0-rc.0",
@@ -33,11 +35,11 @@
     "pg": "^8.12.0",
     "prisma": "^5.19.1",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-is": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-is": "19.0.0-rc-f994737d14-20240522",
     "recharts": "2.13.0-alpha.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
