--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.439.0",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.20",
+    "next-themes": "^0.3.0",
     "pg": "^8.12.0",
     "prisma": "^5.19.1",
     "react": "19.0.0-rc-f994737d14-20240522",
