--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "recharts": "2.13.0-alpha.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
