--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
     },
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "cypress/e2e/homepage.cy.js"
+  ],
   "exclude": ["node_modules"]
 }
